# TRADER_ASSISTANT

TraderAssistant/: README.md  main.py  pyproject.toml
TraderAssistant/src/: __init__.py
TraderAssistant/src/TraderAssitant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
TraderAssistant/src/analysis_market_data/: __init__.py  ia_prediction.py  pattern_detection.py  signal_analysis.py
TraderAssistant/src/graphic_interface/: __init__.py  main_interface.py  trader_statistic.py
TraderAssistant/src/stock_market_data/: __init__.py  direct_market_data.py  historical_market_data.py  preprocess_market_data.py
src/: reader_bitcoin_data_csv.cpp
src/python_modelisation_data/: model_regression_in_out.py  reader_bitcoin_data.py  readme.txt  retrieve_bitcoin_data.py
